--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,28 @@
 name: Cypress Tests
 
-on: 
-    push:
-    workflow_dispatch:
+on:
+  push:
+  workflow_dispatch:
 
 jobs:
   cypress-run:
     runs-on: ubuntu-24.04
     strategy:
-        fail-fast: false
-        matrix:
-            browsers: [chrome, firefox, edge]
+      fail-fast: false
+      matrix:
+        browsers: [chrome, firefox]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      # Install npm dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run in ${{ matrix.browsers }}
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Cypress on ${{ matrix.browsers }}
         uses: cypress-io/github-action@v6
         with:
-            browsers: ${{ matrix.browsers }}
-            command: npx cypress run --browser ${{ matrix.browsers }} --reporter-options reportDir=cypress/reports/${{ matrix.browsers }}
-        
+          command: npx cypress run --browser ${{ matrix.browsers }} --reporter-options reportDir=cypress/reports/${{ matrix.browsers }}
+
       - name: Merge Mochawesome Reports
         run: npx mochawesome-merge cypress/reports/${{ matrix.browsers }}/*.json > cypress/reports/${{ matrix.browsers }}/merged-reports.json
 
@@ -31,6 +32,5 @@ jobs:
       - name: Upload HTML Reports
         uses: actions/upload-artifact@v4
         with:
-            name: Cypress HTML Report ${{ matrix.browsers }}
-            path: cypress/reports/${{ matrix.browsers }}
-
+          name: Cypress HTML Report ${{ matrix.browsers }}
+          path: cypress/reports/${{ matrix.browsers }}
