--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,17 +10,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        browsers: [chrome, firefox]
+        browsers: [chrome, firefox, edge]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Cypress on ${{ matrix.browsers }}
+      # Install npm dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run in ${{ matrix.browsers }}
         uses: cypress-io/github-action@v6
         with:
+          browsers: ${{ matrix.browsers }}
           command: npx cypress run --browser ${{ matrix.browsers }} --reporter-options reportDir=cypress/reports/${{ matrix.browsers }}
 
       - name: Merge Mochawesome Reports
