--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "devDependencies": {
     "cypress": "^14.5.3",
     "cypress-multi-reporters": "^2.0.5",
-    "mocha-junit-reporter": "^2.2.1"
+    "marge": "^1.0.1",
+    "mocha-junit-reporter": "^2.2.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^5.0.0"
   }
 }
