--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -12,6 +12,8 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
+        env:
+          VITE_HEADING: ${{ secrets.VITE_HEADING }}
         with:
           build: npm run build
           start: npm start
