fix: update Cypress run step to use 'npm run dev' instead of 'npm start'

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -15,5 +15,4 @@ jobs:
         env:
           VITE_HEADING: ${{ secrets.VITE_HEADING }}
         with:
-          build: npm run build
-          start: npm start
+          start: npm run dev
